# antiyoy-clone

./: .gitignore  4.2.texture.fs  CMakeLists.txt  CMakeUserPresets.json  Color.h  Grid.cpp  Grid.h  Hexagon.cpp  Hexagon.h  Man.h  README.md  WIN_CONDITION.md  axial.h  board.cpp  board.h  conanfile.txt  desktop.ini  flashing.fs  font.h  game.cpp  game.h  glad.c  main.cpp  player.cpp  player.h  receiver.py  resource_manager.cpp  resource_manager.h  rl_policy.json  run_training.sh  shader_s.h  sockets.cpp  sockets.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  toolchain-mingw.cmake  visualize_training.py  warrior.cpp  (+1 more)
Antiyoy/: PRZECZYTAJ.txt  anti  config.txt  config_adv.txt  config_ppo.txt  config_tactical.txt  receiver.py
Antiyoy/bot/: __init__.py  ai_rl_ready.py  ai_simple.py  enhanced_qtable.py  game_utils.py  province.py  rl_policy.py
cmake/: Findglfw3.cmake  Findglm.cmake
freetype/: CMakeLists.txt
glfw/: CMakeLists.txt
include/glad/: glad.h
rl_bot/: __init__.py  agent.py  antiyoy_env.py  game_rules.py  play_vs_agent.py  play_vs_human.py  ppo_agent.py  requirements.txt  socket_client.py  test_game_rules.py  test_training.py  train_1000_games.py  train_gpu.py  train_ppo_curriculum.py  train_quick.py  train_real_game_with_actions.py  train_selfplay.py  train_with_visualization.py  watch_agents_play.py  watch_trained_agents.py
rl_bot/models/curriculum/: agent_100.pth  agent_125.pth  agent_150.pth
shaders/: 4.2.texture.vs  flashing.fs  inside.fs  instance.fs  instance.vs
shaders-arr/: instance_fs.h  instance_vs.h  sprite_fs.h  sprite_vs.h  text_fs.h  text_vs.h
textures-arr/: b.h  castle_256.h  exclamation.h  farm1_256.h  gravestone_256.h  hexagon.h  palmTree_256.h  pineTree_256.h  shield_placeholder.h  soilder1_256.h  soldier2_256.h  soldier3_256.h  soldier4_256.h  strongTower_256.h  tower_256.h
